<?xml version="1.0"?>
<package format="2">
  <name>aruco_perception</name>
  <version>0.0.0</version>
  <description>aruco_perception</description>

  <maintainer email="tfoi01@todo.todo">tfoi01</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Required dependencies -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- tf2 dependencies -->
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>opencv2</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- tf2 export dependencies -->
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- tf2 exec dependencies -->
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>
</package>
